--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
-    "python.linting.pylintEnabled": true,
-    "python.linting.enabled": true
+  "python.linting.flake8Enabled": true,
+  "python.linting.enabled": true,
+  "python.linting.flake8Args": ["--max-line-length=88", "--extend-ignore=E203"],
+  "python.formatting.provider": "black",
+  "python.linting.pylintEnabled": false
 }
