--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
   "python.linting.enabled": true,
   "python.linting.flake8Args": ["--max-line-length=88", "--extend-ignore=E203"],
   "python.formatting.provider": "black",
-  "python.linting.pylintEnabled": false
+  "python.linting.pylintEnabled": false,
+  "python.pythonPath": "venv/bin/python"
 }
