--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,7 @@ install:
   - pip install -e .
 language: python
 python: "3.6"
-script: pytest
+script:
+  - pytest
+  - black --check --diff
+  - prettier --check .
