--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
 ---
-install:
-  - pip install -r requirements.txt
-  - pip install -e .
-language: python
-python: "3.6"
-script:
-  - pytest
-  - flake8
-  - black --check --diff
-  - prettier --check .
+matrix:
+  include:
+    - language: python
+      install:
+        - pip install -r requirements.txt
+        - pip install -e .
+      python: "3.6"
+      script:
+        - pytest
+        - flake8
+        - black --check --diff
+    - language: node_js
+      node_js: node
+      install:
+        - npm install prettier
+      script:
+        - prettier --check .
