#19: Update .travis.yml.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
       script:
         - pytest
         - flake8
-        - black --check --diff
+        - black --check --diff .
     - language: node_js
       node_js: node
       install:
