#20: Add pylint and make it run during build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ matrix:
         - pytest
         - flake8
         - black --check --diff .
+        - pylint --exit-zero .
     - language: node_js
       node_js: node
       install:
