--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.4
+astroid==2.4.2
 attrs==20.2.0
 black==20.8b1
 certifi==2020.6.20
@@ -15,10 +16,12 @@ identify==1.5.6
 idna==2.10
 importlib-metadata==2.0.0
 iniconfig==1.1.1
+isort==5.6.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.17.0
 kiwisolver==1.2.0
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 matplotlib==3.3.1
 mccabe==0.6.1
@@ -39,6 +42,7 @@ protobuf==3.13.0
 py==1.9.0
 pycodestyle==2.6.0
 pyflakes==2.2.0
+pylint==2.6.0
 pyparsing==2.4.7
 pytest==6.0.2
 python-dateutil==2.8.1
@@ -56,5 +60,6 @@ typing-extensions==3.7.4.3
 urllib3==1.25.11
 virtualenv==20.1.0
 Werkzeug==1.0.1
+wrapt==1.12.1
 yfinance==0.1.54
 zipp==3.4.0
