--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ distlib==0.3.1
 filelock==3.0.12
 flake8==3.8.4
 Flask==1.1.2
+Flask-Table==0.5.0
 get-all-tickers==1.7
 identify==1.5.6
 idna==2.10
